# rbot

./: Cargo.toml  README.md
src/: conversions.rs  core.rs  errors.rs  hostfn.rs  lib.rs  modules.rs  print_macros.rs  rotations.rs
src/constants/: buffs.rs  kind.rs  mod.rs  tag.rs
