[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
rice-coder = {path ="../rice-coder"}
either = "1.8"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0.50"

[lib]
name = "bot"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "lib"]
