[package]
name = "rbot"
version = "0.1.0"
edition = "2021"
description = "Library for programming robots in Bot Beats."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
rbot-messages = "0.1.0"
either = "1.8"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0.50"

[lib]
name = "rbot"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "lib"]
